--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,10 @@
   flex-wrap: wrap;
   gap: 48px 24px;
   list-style: none;
-  margin: 0;
+  padding: 0;
+  margin: 0 auto;
   justify-content: center;
+  max-width: 1200px;
 }
 
 .gallery-item {
@@ -21,6 +23,6 @@
 
 .gallery-image {
   width: 360px;
-  height: auto;
+  height: 300px;
   display: block;
 }
